Sat Apr 30 19:24:40 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_ge): Define Integer#>=.

	* bignum.c (rb_big_ge): Don't define Bignum#>=.
	  Renamed from big_ge.

	* internal.h (rb_big_ge): Declared.

Sat Apr 30 19:20:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/standard_library.rdoc: Remove obsoleted classes and modules.

Sat Apr 30 19:09:23 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_lt): Define Integer#<.

	* bignum.c (rb_big_lt): Don't define Bignum#<.
	  Renamed from big_lt.

	* internal.h (rb_big_lt): Declared.

Sat Apr 30 18:44:05 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_le): Define Integer#<=.

	* bignum.c (rb_big_le): Don't define Bignum#<=.
	  Renamed from big_le.

	* internal.h (rb_big_le): Declared.

Sat Apr 30 18:11:44 2016  Tanaka Akira  <akr@fsij.org>

	* bignum.c (Init_Bignum): Define Integer#GMP_VERSION.

Sat Apr 30 16:58:18 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_remainder): Define Integer#remainder.

	* bignum.c (rb_big_remainder): Don't define Bignum#remainder.

	* internal.h (rb_big_remainder): Declared.

Sat Apr 30 15:29:24 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_uminus): {Fixnum,Bignum}#-@ is unified into
	  Integer.

	* bignum.c (rb_big_uminus): Don't define Bignum#-@.

Sat Apr 30 14:42:20 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_idiv): {Fixnum,Bignum}#div is unified into
	  Integer.

	* bignum.c (rb_big_idiv): Don't define Bignum#div.

Sat Apr 30 14:25:55 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_modulo): {Fixnum,Bignum}#modulo is unified into
	  Integer.

	* bignum.c (rb_big_modulo): Don't define Bignum#modulo.

Sat Apr 30 14:04:30 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_divmod): {Fixnum,Bignum}#divmod is unified into
	  Integer.

	* bignum.c (rb_big_divmod): Don't define Bignum#divmod.

Sat Apr 30 13:20:00 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_fdiv): {Fixnum,Bignum}#fdiv is unified into
	  Integer.
