@@ -3826,11 +3826,12 @@ int_cmp(VALUE x, VALUE y)
 }
 
 /*
+ * Document-method: Integer#>
  * Document-method: Fixnum#>
  * call-seq:
- *   fix > real  ->  true or false
+ *   int > real  ->  true or false
  *
- * Returns +true+ if the value of +fix+ is greater than that of +real+.
+ * Returns +true+ if the value of +int+ is greater than that of +real+.
  */
 
 static VALUE
@@ -3849,6 +3850,18 @@ fix_gt(VALUE x, VALUE y)
     else {
 	return rb_num_coerce_relop(x, y, '>');
     }
+}
+
+static VALUE
+int_gt(VALUE x, VALUE y)
+{
+    if (FIXNUM_P(x)) {
+	return fix_gt(x, y);
+    }
+    else if (RB_TYPE_P(x, T_BIGNUM)) {
+	return rb_big_gt(x, y);
+    }
+    return Qnil;
 }
 
 /*
@@ -4924,6 +4937,7 @@ Init_Numeric(void)
     rb_define_method(rb_cInteger, "abs", int_abs, 0);
     rb_define_method(rb_cInteger, "magnitude", int_abs, 0);
 
+    rb_define_method(rb_cInteger, ">", int_gt, 1);
     rb_define_method(rb_cInteger, ">=", int_ge, 1);
     rb_define_method(rb_cInteger, "<", int_lt, 1);
     rb_define_method(rb_cInteger, "<=", int_le, 1);
