@@ -1,3 +1,12 @@
+Sat Apr 30 19:41:15 2016  Tanaka Akira  <akr@fsij.org>
+
+	* numeric.c (int_gt): Define Integer#>.
+
+	* bignum.c (rb_big_gt): Don't define Bignum#>.
+	  Renamed from big_gt.
+
+	* internal.h (rb_big_gt): Declared.
+
 Sat Apr 30 19:24:40 2016  Tanaka Akira  <akr@fsij.org>
 
 	* numeric.c (int_ge): Define Integer#>=.
